--- a/Exercicios/exercicio22/fundo001.html
+++ b/Exercicios/exercicio22/fundo001.html
@@ -15,19 +15,20 @@
       width: 200px;
       height: 200px;
     }
-
+      /*Imagem 1 com a cor azul de fundo*/
     div#q1{
       background-color: skyblue;
     }
 
+    /*Imagem 2 com um fundo gradiente com amarelo e vermelho*/
     div#q2{
       background-image: linear-gradient(to bottom, yellow, red);
     }
-
+      /*Imagem 4 com um fundo de uma imagem*/
     div#q3{
       background-image: url('imagens/pattern001.png') ;
     }
-
+      /*Corpo da página com um fundo de uma imagem*/
     body{
       background-image: url(imagens/wallpaper001.jpg);
     }
