--- a/Exercicios/exercicio22/fundo003.html
+++ b/Exercicios/exercicio22/fundo003.html
@@ -15,19 +15,20 @@
       border-radius: 20px;
       margin: 10px;
     }
-
+    /* Posicionada ao topo a esquerda*/
     div#q1{
       background-position: left top;
     }
-
+    /*Posicionado no centro do lado esquerdo*/
     div#q2{
       background-position: left center;
     }
-
+    /*Posicionado a parte inferior a direita*/
     div#q3{
       background-position: right bottom;
     }
-
+   
+    /*Posicionado ao centro*/
     div#q4{
       background-position: center center;
     }
