--- a/Exercicios/exercicio22/fundo004.html
+++ b/Exercicios/exercicio22/fundo004.html
@@ -9,13 +9,14 @@
   <title>Posicionamento</title>
 
   <style>
+    /*Posicionamento de uma imagem ao centro do corpo (body) usando as propriedades do background*/
     body{
-      height: 98vh;
+      height: 98vh; /*Altura*/
       border: 1px dashed black;
       background-image: url(https://www.nicelembrancinhas.com.br/image/cache/webp/catalog/rei_leao/simba_site-500x500.webp);
-      background-size: 100px;
-      background-repeat: no-repeat;
-      background-position: center center;
+      background-size: 100px; /*Tamanho da imagem*/
+      background-repeat: no-repeat; /*Repetição da imagem*/
+      background-position: center center; /*Posicionamento da imagem*/
 
     }
   </style>
