--- a/Exercicios/exercicio22/fundo005.html
+++ b/Exercicios/exercicio22/fundo005.html
@@ -9,6 +9,7 @@
   <title>Posicionamento</title>
 
   <style>
+    /*Imagem alinhada ao centro*/
     body{
       height: 98vh;
       background-image: url(imagens/wallpaper003.jpg);
