--- a/Exercicios/exercicio22/fundo006.html
+++ b/Exercicios/exercicio22/fundo006.html
@@ -9,7 +9,9 @@
   <style>
     body{
       height: 100vh;
-      /*background-color: black;
+
+      /*
+      background-color: black;
       background-image: url(imagens/wallpaper002.jpg);
       background-position: top center;
       background-repeat: no-repeat;
